objects/BMCServiceDesk__Encryption_Report__c.object
<CustomObject>
    <description>Lists the encrypted fields that are used in query conditions (such as QuickViews and Lookup Filters) and the fields of type Text Area (Rich) in Service Request Definitions</description>
    <fields>
        <fullName>BMCServiceDesk__Field_Names__c</fullName>
        <label>Field Names</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Encrypted</fullName>
                </value>
                <value>
                    <fullName>Text Area (Rich)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impacted_Feature__c</fullName>
        <label>Impacted Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impacted_Record__c</fullName>
        <label>Impacted Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QuickView_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuickView Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Encryption_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scan_Date__c</fullName>
        <label>Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Encryption Report</label>
    <nameField>
        <label>Encryption Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encryption Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>